Fixed layout issues in dark mode

--- a/css/darkMode.css
+++ b/css/darkMode.css
@@ -62,3 +62,16 @@ header>#logo {
         border-right: none;
     }
 }
+
+/* phone screen-size layout */
+@media only screen and (max-width: 500px) {
+    #body {
+        grid-template-columns: 4fr;
+        grid-template-areas:
+            "aside"
+            "header"
+            "main"
+            "footer"
+        ;
+    }
+}
